@@ -1,3 +1,8 @@
+2006-08-21  Thomas Wood  <thos@gnome.org>
+
+	* gnome-theme-manager.c: (queue_pixbuf_generation),
+	(pixbuf_idle_func), (load_meta_themes): Applied first two patches from bug 351521
+
 2006-07-27  Rob Bradford <robster@debian.org>
 
 	Fixes #346041
